Huge amount of problems with settings putting into the folder

--- a/Connection/App.config
+++ b/Connection/App.config
@@ -2,10 +2,16 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OperatorsSolution.Program.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Operators_Solution.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <OperatorsSolution.Program.Settings>
+            <setting name="Test" serializeAs="String">
+                <value />
+            </setting>
+        </OperatorsSolution.Program.Settings>
         <Operators_Solution.Properties.Settings>
             <setting name="GraphicsSoftware" serializeAs="GraphicsSoftware">
                 <value />
