--- a/TestModule/App.config
+++ b/TestModule/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <userSettings>
         <TestModule.Settings>
-            <setting name="GraphicsSoftwareInfo" serializeAs="String">
+            <setting name="GraphicsSoftwareInfo" serializeAs="GraphicsSoftwareInfo">
                 <value />
             </setting>
             <setting name="ProjectFile" serializeAs="String">
